# loopr

./: .gitignore  CONTEXT.md  README.md  SKILL.md  pyproject.toml
.cursor/: flow.json  hooks.json
.scratch/mcp-authorize-provisioning/: PLAN.md  PRD.md
docs/adr/: 0001-thin-dispatcher-structured-result-no-llm.md  0002-own-daemon-sqlite-engine.md  0003-fire-and-notify-no-approval-gates.md  0004-declarative-config-agent-drivable-cli.md  0005-shared-workspaces-per-workspace-lease.md  0006-loopr-driven-routing.md  0007-python-implementation.md
docs/issues/: 01-manual-one-shot-firing.md  02-scheduled-firing-daemon.md  03-structured-result-capture.md  04-conditional-loop-handoff.md  05-human-handoff-notification.md  06-provisioning-before-firing.md  07-per-workspace-lease.md  08-agent-drivable-cli.md
docs/plans/: 2026-07-21-mcp-authorize-provisioning.md
docs/proposals/: powerful-chains-roadmap.md
flow/: README.md  install.sh
flow/hooks/: format-edited.sh  stop-gate.sh
flow/lib/: config.sh  detect.sh
flow/templates/: capability-verify.example.json  flow.json.example  no-mistakes.toml  overnight-plan.example.md
plans/overnight/: issue-01.md  issue-01.verify.json  issue-02.md  issue-02.verify.json  issue-03.md  issue-03.verify.json  issue-04.md  issue-04.verify.json  (+2 more)
tests/: test_adapters.py  test_cli.py  test_cli_json.py  test_config.py  test_db.py  test_firing.py  test_handoff.py  test_lease.py  test_logs_render.py  test_notify.py  test_predicate.py  test_provision.py  test_result.py  test_schedule.py  test_scheduler.py  test_units_daemon.py
(+26 files in other folders)
