[project]
name = "loopr"
version = "0.1.0"
description = "A lightweight CLI that schedules recurring agent work."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "croniter>=2.0",
]

[project.scripts]
loopr = "loopr.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
